--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/momo.html">Momo Recipes</a>
+        <ul>
+           <li><a href="recipes/momo.html">Momo Recipes</a></li> 
+           <li><a href="recipes/biryani.html">Biryani Recipes</a></li>
+        </ul>
     </body>
 </html>
