--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
            <li><a href="recipes/momo.html">Momo Recipes</a></li> 
            <li><a href="recipes/biryani.html">Biryani Recipes</a></li>
+           <li><a href="recipes/paneer-naan.html">Paneer Naan Recipes</a></li>
         </ul>
     </body>
 </html>
