Add style with basic css

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-           <li><a href="recipes/momo.html">Momo Recipes</a></li> 
-           <li><a href="recipes/biryani.html">Biryani Recipes</a></li>
-           <li><a href="recipes/paneer-naan.html">Paneer Naan Recipes</a></li>
+        <h1 class="headings head">Odin Recipes</h1>
+        <ul class="link">
+           <li><a class="recipes momo" href="recipes/momo.html">Momo Recipes</a></li> 
+           <li><a class="recipes biryani" href="recipes/biryani.html">Biryani Recipes</a></li>
+           <li><a class="recipes naan" href="recipes/paneer-naan.html">Paneer Naan Recipes</a></li>
         </ul>
     </body>
 </html>
