--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -1,13 +1,16 @@
-<h1>Biryani Recipes</h1>
+<! -- placement of css stylesheet -->
+<link rel="stylesheet" href="../styles.css">
+
+<h1 class="headings head">Biryani Recipes</h1>
 <img src="../images/biryani.jpg" alt="Image of a tasty Biryani">
-<h2>Description</h2>
+<h2 class="headings subhead">Description</h2>
 <p>
     Biryani is a fragrant and flavorful rice dish that has become synonymous with celebration and comfort in South Asian cuisine. Originating from the Indian subcontinent, Biryani is a harmonious blend of aromatic basmati rice, tender meat (often chicken, lamb, or goat), and a medley of spices that infuse each grain with a rich, savory essence. What makes Biryani unique is the layering technique, where the marinated meat and partially cooked rice are arranged in alternating layers, often topped with caramelized onions, fresh herbs, and a sprinkle of saffron-infused milk for added richness and color.
 </p>
 <p>
     Each region has its own interpretation of Biryani, from the Hyderabadi Biryani with its robust flavors and the use of slow-cooking (dum) technique, to the Kolkata Biryani, known for its subtle sweetness and the surprising addition of potatoes. Biryani is more than just a meal; it’s an experience that brings together diverse flavors and culinary traditions in a single dish. Whether served with cooling raita, spicy pickles, or a simple salad, Biryani is a dish that promises warmth and satisfaction in every bite.
 </p>
-<h2>Ingredients</h2>
+<h2 class="headings subhead">Ingredients</h2>
 <ul>
     <li><strong>Rice:</strong>
       <ul>
@@ -87,7 +90,7 @@
       </ul>
     </li>
   </ul>
-<h2>Steps</h2>  
+<h2 class="headings subhead">Steps</h2>  
 <ol>
     <li><strong>Marinate the Protein:</strong>
       <ul>
