--- a/recipes/momo.html
+++ b/recipes/momo.html
@@ -1,13 +1,16 @@
-<h1>Momo Recipes</h1>
+<! -- placement of css stylesheet -->
+<link rel="stylesheet" href="../styles.css">
+
+<h1 class="head headings">Momo Recipes</h1>
 <img src="../images/momo.jpeg" alt="Image of a tasty momo">
-<h2>Description</h2>
+<h2 class="headings subhead">Description</h2>
 <p>
     Momo is a popular South Asian dumpling that originated in Tibet and has since become a beloved dish across Nepal, Bhutan, and parts of India. These bite-sized delights are made by filling thinly rolled dough with a variety of savory ingredients, often including finely minced meat, vegetables, or a combination of both. The fillings are seasoned with aromatic spices, garlic, ginger, and herbs, which give momos their distinctive, flavorful taste.
 </p>
 <p>
     Momos can be steamed, fried, or boiled, depending on regional preferences and the desired texture. Steamed momos are the most common, offering a soft and tender bite, while fried momos have a crispy outer layer that contrasts beautifully with the juicy filling inside. They are typically served with a spicy dipping sauce known as "achar," made from tomatoes, chili peppers, and other seasonings. Whether enjoyed as a snack, appetizer, or main course, momos are a versatile and satisfying dish that reflects the rich culinary heritage of the Himalayan region.
 </p>
-<h2>Ingredients</h2>
+<h2 class="headings subhead">Ingredients</h2>
 <ul>
     <li>Ground meat (chicken, pork, beef, or lamb)</li>
     <li>Onion, finely chopped</li>
@@ -21,7 +24,7 @@
     <li>Black pepper or chili powder (for heat)</li>
     <li>Oil (for moisture)</li>
 </ul>
-<h2>Steps</h2>
+<h2 class="headings subhead">Steps</h2>
 <ol>
     <li><strong>Prepare the Dough:</strong> In a large bowl, combine 2 cups of all-purpose flour with a pinch of salt. Gradually add water while mixing until a firm, elastic dough forms. Knead the dough on a lightly floured surface for about 5-7 minutes until smooth. Cover the dough with a damp cloth and let it rest for 30 minutes.</li>
   
