--- a/recipes/paneer-naan.html
+++ b/recipes/paneer-naan.html
@@ -1,13 +1,16 @@
-<h1>Paneer Naan Recipes</h1>
+<! -- placement of css stylesheet -->
+<link rel="stylesheet" href="../styles.css">
+
+<h1 class="headings head">Paneer Naan Recipes</h1>
 <img src="../images/paneer-naan.jpg" alt="Image of Delicious Paneer Naan">
-<h2>Description</h2>
+<h2 class="headings subhead">Description</h2>
 <p>
     Paneer Naan is a delightful variation of the traditional Indian naan bread, infused with a flavorful paneer (Indian cottage cheese) filling. This soft, pillowy flatbread is a popular choice in Indian cuisine, known for its delicious blend of textures and flavors. The dough is enriched with yogurt and a touch of ghee or butter, making it incredibly soft and pliable. The paneer filling, often seasoned with spices like cumin, coriander, and garam masala, adds a savory and slightly tangy flavor that complements the naan perfectly.
 </p>
 <p>
     Baked in a tandoor or on a hot griddle, Paneer Naan develops a beautiful golden-brown crust with a tender, cheesy interior. It is a versatile accompaniment to a variety of Indian curries and gravies, from rich and creamy butter chicken to spicy vegetable korma. Paneer Naan can also be enjoyed on its own, with a simple side of pickle or yogurt, making it a delicious and satisfying bread option for any meal.
 </p>
-<h2>Ingredients</h2>
+<h2 class="headings subhead">Ingredients</h2>
 <ul>
     <li><strong>For the Dough:</strong>
       <ul>
@@ -46,7 +49,7 @@
       </ul>
     </li>
   </ul>
-  <h2>Steps</h2>
+  <h2 class="headings subhead">Steps</h2>
   <ol>
     <li><strong>Prepare the Dough:</strong>
       <ul>
